# stara_cpp

./: .gitmodules  CMakeLists.txt  README.md  example.py  main.py  pyproject.toml
.github/workflows/: build.yml
include/: astar.hpp
src/: astar.cpp  stara_cpp.cpp
stara_cpp/: __init__.py
